[package]
name = "relayer-base"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lapin = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xrpl_api = { workspace = true }
xrpl_types = { workspace = true }
xrpl_http_client = { workspace = true }
xrpl_amplifier_types = { workspace = true }
axelar-wasm-std = { workspace = true }
router_api = { workspace = true }
multisig = { workspace = true }
interchain-token-service = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
async-std = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
coingecko = { workspace = true }
rust_decimal = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-middleware = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
r2d2 = { workspace = true }
mockall = { workspace = true, optional = true }
testcontainers = { workspace = true }
async-trait = { workspace = true }
ton_types = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
mockito = { workspace = true }

[[bin]]
name = "price_feed"
path = "src/bin/price_feed.rs"

[[bin]]
name = "queue_migration"
path = "src/bin/scripts/queue_migration.rs"

[features]
mocks = ["dep:mockall"]

[lints]
workspace = true