[package]
name = "relayer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
lapin = "2.5.0"
async-stream = "0.3.6"
futures = "0.3.31"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full", "test-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xrpl_api = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_api" }
xrpl_types = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_types" }
xrpl_http_client = { git = "https://github.com/commonprefix/xrpl-sdk-rust", branch = "main", package = "xrpl_http_client" }
xrpl_amplifier_types = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "xrpl-types" }
axelar-wasm-std = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "axelar-wasm-std" }
router_api = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "router-api" }
multisig = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "fix/non-unique-unsigned-tx-hash", package = "multisig" }
interchain-token-service = { git = "https://github.com/commonprefix/axelar-amplifier", branch = "xrpl", package = "interchain-token-service" }
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["native-tls"] }
thiserror = "2.0.3"
error-stack = "0.5.0"
serde = "1.0.215"
tokio-util = { version = "0.7.12", features = ["rt"] }
uuid = { version = "1.17.0", features = ["v4"] }
redis = { version = "0.32.4", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
async-std = "1.13.0"
sentry = { version = "0.42.0", features = [
    "opentelemetry",
    "reqwest",
    "sentry-opentelemetry",
    "tracing",
] }
sentry-tracing = "0.42.0"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_29"] }
base64 = "0.22.1"
serde_yaml = "0.9.34"
chrono = { version = "0.4.40", features = ["serde"] }
coingecko = "1.1.3"
rust_decimal = "1.37.1"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.2"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
dotenv = "0.15.0"
mockall = { version = "0.13.1", optional = true }
async-trait = "0.1.88"
log = "0.4.27"
tracing-opentelemetry = "0.30.0"

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.6.1"
httpmock = "0.7.0"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }

[[bin]]
name = "price_feed"
path = "src/bin/price_feed.rs"

[[bin]]
name = "queue_migration"
path = "src/bin/scripts/queue_migration.rs"

[features]
mocks = ["dep:mockall"]

[lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
unnecessary_box_returns = "warn"
